--- a/style.css
+++ b/style.css
@@ -463,6 +463,7 @@ section{
 }
 .contacts2 li{
   position: relative;
+  padding:5px;
   list-style: none;
   margin: 10px;
   background-color: transparent;
