--- a/style.css
+++ b/style.css
@@ -494,6 +494,7 @@ section{
   top: 50%;
   width: 400px;
   height: 100px;
+  padding-bottom:5px;
   display: inline-block;
   border-radius: 10px;
   display: flex;
