--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ img{
 .home__img{
     position: absolute;
     z-index: 0;
-    width: 400px;
-    height: 500px;
+    width: 200px;
+    height: 200px;
     top: 50%;
     left: 75%;
     background-image: linear-gradient(-225deg, #FF057C 0%, #7C64D5 48%, #4CC3FF 100%);
@@ -234,6 +234,7 @@ img{
       left: 75%;
     }
 }
+
 .about__img{
     position: relative;
     padding-top: 1rem;
@@ -382,6 +383,7 @@ img{
     background-color: var(--first-color);
 }
 .footer__container{
+    padding-top: 1%;
     row-gap: 2rem;
 }
 .footer__title{
@@ -392,6 +394,9 @@ img{
 .footer__link{
     padding: .25rem 0;
 }
+.footer__data{
+    padding-bottom: 10%;
+}
 .footer__link:hover{
     color: #1396d2;
 }
@@ -399,6 +404,10 @@ img{
 @media screen and (min-width:768px) {
     body{
         margin: 0;
+    }
+    .home__img{
+        width: 400px;
+        height: 500px;
     }
     .section{
         height: 100vh;
