--- a/style.css
+++ b/style.css
@@ -279,13 +279,17 @@ img{
 }
 .skills__name{
     display: inline-block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     font-size: var(--small-font-size);
     margin-right: var(--mb-2);
     margin-bottom: var(--mb-3);
-    padding: .25rem .5rem;
+    padding: 0rem .5rem;
     background-color: transparent;
     border-radius: .25rem;
 }
+
 .skills__name:hover{
     background-color: var(--first-color);
     color: var(--white-color);
@@ -455,8 +459,12 @@ img{
         height: 200px;
     }
     .underline{
+        font-weight: bold;
         text-decoration: underline;
         cursor: pointer;
+    }
+    .bold{
+        font-weight: bold;
     }
     .about__img img{
         width: 165px;
