--- a/style.css
+++ b/style.css
@@ -128,18 +128,8 @@ img{
 }
 
 @media screen and (max-width:768px) {
-    .nav__menu{
-        
-        position: fixed;
-        z-index: 10;
-        top: var(--header-height);
-        right: -100%;
-        width: 35%;
-        height: 100%;
-        padding: 2rem;
-        background-color: rgba(255,255,255, .3);
-        transition: .5s;
-        backdrop-filter: blur(10px);
+    .nav__list{
+        opacity: 0;
     }
 }
 .nav__item{
@@ -291,7 +281,9 @@ img{
 }
 
 .skills__name:hover{
-    background-color: var(--first-color);
+    background-color: #FAD961;
+    background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+
     color: var(--white-color);
 }
 .skills__img img{
@@ -323,7 +315,11 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255,255,255,.5);
+    /* background-color: rgba(255,255,255,.5); */
+    background-color: #FFDEE9;
+    opacity: 0.98;
+    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+
     border-radius: .5rem;
     cursor: pointer;
     backdrop-filter: blur(10px);
@@ -379,6 +375,7 @@ img{
 /* FOOTER */
 .footer{
     background-color: var(--first-color);
+    text-align: center;
 }
 .footer__container{
     padding-top: 1%;
@@ -393,7 +390,7 @@ img{
     padding: .25rem 0;
 }
 .footer__data{
-    padding-bottom: 10%;
+    padding: 10%;
 }
 .footer__link:hover{
     color: #1396d2;
@@ -487,8 +484,11 @@ img{
         width: 380px;
     }
     .footer__container{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         justify-items: center;
+    }
+    .footer__data{
+        padding: 2%;
     }
 }
 
@@ -498,3 +498,43 @@ img{
         margin-right: auto;
     }
 }
+
+
+/* [class*="reveal-"] {
+  opacity: 0;
+  transform: translateY(-30px);
+}
+
+.reveal-visible{
+  opacity: 1;
+  transform: translateY(0);
+  transition: 1s cubic-bezier(.5,0,0,1);
+}
+
+.reveal-2{
+    transition-delay: 0.1s;
+}
+
+.reveal-3{
+    transition-delay: 0.2s;
+}
+
+.reveal-4{
+    transition-delay: 0.3s;
+}
+
+.reveal-5{
+    transition-delay: 0.4s;
+}
+
+.reveal-6{
+    transition-delay: 0.5s;
+}
+
+.reveal-7{
+    transition-delay: 0.6s;
+}
+
+.reveal-8{
+    transition-delay: 0.7s;
+} */
